--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/jwt-demo?useSSL=false&serverTimezone=CTT
+spring.datasource.url=jdbc:mysql://192.168.146.101:3306/jwt-demo?useSSL=false&serverTimezone=CTT
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=321123
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
